# Q-Rust

./: .gitignore  Cargo.toml  MIGRATION_README.md  PROJECT_OVERVIEW.md  README.md  rebuild_clean_history.py  run_decathlon.sh
.github/workflows/: publish.yml  rust.yml
examples/: benchmark_chain_qrust.rs  benchmark_massive_qrust.rs  benchmark_qrust.rs  benchmark_structure_qrust.rs  benchmark_ultimate_qrust.rs  compare_qrust.rs  debug_kak.rs  export_qrust_for_qiskit.rs  routing_demo.rs  transpile_e2e.rs
src/: backend.rs  error.rs  lib.rs  parser.rs  simulator.rs  verify.rs
src/ir/: ast.rs  circuit.rs  gate_def.rs  gates.rs  mod.rs  operations.rs  registry.rs  signature.rs
src/parser/: ast.rs  mod.rs  rules.rs
src/transpiler/: dag.rs  decomposition.rs  layout.rs  mod.rs  optimization.rs  pass.rs  pauli_tracker.rs  profiler.rs  property_set.rs  report.rs  routing.rs  target_basis.rs
src/transpiler/synthesis/: kak.rs  mod.rs  numerical.rs  qsd.rs  qsearch.rs  zyz.rs
tests/: cli_smoke_test.rs  e2e_known_circuits.rs  e2e_pipeline_integration.rs  extra_routing_test.rs  extra_transpiler_test.rs  integration_test.rs  parser_test.rs  routing_suite.rs  transpiler_suite.rs
tests/fixtures/: bell_state.qasm  controlled_gates.qasm  csx_gate.qasm  custom_gate.qasm  generic_5q.json  ghz_3.qasm  ibm_heavy_hex_16q.json  ibm_nairobi_7q.json  ibm_quito_5q.json  identity_only.qasm  multi_gate.qasm  rotations.qasm  toffoli.qasm
