[package]
name = "q-rust"                # crate name
version = "0.1.1"
edition = "2021"
authors = ["Arturo Acuaviva <arturoacuaviva@gmail.com>"]
description = "A modular quantum transpiler and QASM 2.0 parser written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arturacu/Q-Rust"
readme = "README.md"
keywords = ["quantum", "transpiler", "qasm", "parser", "rust"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
nalgebra = "0.34.1"
nom = "7.1.3"
num-complex = "0.4.6"
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

