[package]
name = "q-rust"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arturo Acuaviva <arturoacuaviva@gmail.com>"]
description = "A modular quantum transpiler and QASM 2.0 parser written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arturacu/Q-Rust"
readme = "README.md"
keywords = ["quantum", "transpiler", "qasm", "parser", "compiler"]
categories = ["science", "mathematics", "algorithms"]

[features]
default = []
serde-ir = []

[dependencies]
nalgebra = "0.34.1"
nom = "7.1.3"
num-complex = "0.4.6"
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[[example]]
name = "transpile_e2e"

[[example]]
name = "routing_demo"

[[example]]
name = "compare_qrust"

[[example]]
name = "debug_kak"
# Extra metadata
