[package]
name = "q-rust"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arturo Acuaviva <arturoacuaviva@gmail.com>"]
description = "A modular quantum transpiler and OpenQASM 2.0 parser written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Arturacu/Q-Rust"
homepage = "https://github.com/Arturacu/Q-Rust"
documentation = "https://docs.rs/q-rust"
readme = "README.md"
keywords = ["quantum", "transpiler", "qasm", "compiler", "qiskit"]
categories = [
    "science",
    "compilers",
    "mathematics",
    "algorithms",
    "command-line-utilities",
]

# docs.rs builds default features only by default; opt into all features
# so the `serde-ir`-gated `Serialize`/`Deserialize` impls render.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# No features enabled by default — keeps the dep graph minimal.
default = []
# Derive `Serialize` / `Deserialize` on all IR types
# (`Circuit`, `Operation`, `GateType`, `ClassicalCondition`, etc.).
serde-ir = []

[dependencies]
nalgebra = "0.34.1"
nom = "7.1.3"
num-complex = "0.4.6"
petgraph = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# (No dev-dependencies are needed: integration tests reuse the runtime
# deps `serde_json` for fixture loading. `proptest`, `criterion`, and
# `cargo-fuzz` integrations are tracked under G-FUZZ-01 / G-PERF-01.)

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[[bin]]
name = "qrust"
path = "src/bin/qrust.rs"

[[example]]
name = "transpile_e2e"

[[example]]
name = "routing_demo"

[[example]]
name = "compare_qrust"

[[example]]
name = "debug_kak"